# docs/swagger.json
@@ -183,6 +183,12 @@
                         "name": "file",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Use original filename",
+                        "name": "useOriginalFilename",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
